* chore(package.json): add provenance flag to publishConfig

--- a/package.json
+++ b/package.json
@@ -64,5 +64,8 @@
     "android": {
       "javaPackageName": "org.staxtech.android.pdf"
     }
+  },
+  "publishConfig": {
+    "provenance": true
   }
 }
