--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,17 +6,25 @@ on:
   # release:
   #   types: [published]
 jobs:
-  build:
+  publish:
     runs-on: ubuntu-latest
+
+    permissions:
+      id-token: write
+      contents: write
+
     steps:
       - uses: actions/checkout@v4
       # Setup .npmrc file to publish to npm
       - uses: actions/setup-node@v4
         with:
           node-version: "20.x"
+          cache: yarn
           registry-url: "https://registry.npmjs.org"
-      - run: npm i
-      - run: npm ci
-      - run: npm publish --provenance --access public
+      - run: npm install -g npm yarn
+      - run: yarn
+      - name: Release
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+        run: npx semantic-release
