* chore(publish.yml): enable corepack and run yarn command

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,7 +22,7 @@ jobs:
           cache: yarn
           registry-url: "https://registry.npmjs.org"
       - run: npm install -g npm yarn
-      - run: yarn
+      - run: corepack enable && yarn
       - name: Release
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
