--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "description": "A modern React Native PDF view component that supports Android and iOS",
   "main": "index.js",
   "typings": "./index.d.ts",
-  "repository": "https://github.com/DanfordGidraph/react-native-render-pdf",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/DanfordGidraph/react-native-render-pdf.git"
+  },
   "keywords": [
     "react-component",
     "react-native",
@@ -27,10 +30,10 @@
       "tagName": "v${version}"
     },
     "npm": {
-      "publish": true
+      "publish": false
     },
     "github": {
-      "release": true
+      "release": false
     },
     "plugins": {
       "@release-it/conventional-changelog": {
