--- a/android/build.gradle
+++ b/android/build.gradle
@@ -52,13 +52,13 @@ def resolveReactNativeDirectory() {
     )
 }
 
-//def REACT_NATIVE_DIR = resolveReactNativeDirectory()
-//
-//def reactProperties = new Properties()
-//file("$REACT_NATIVE_DIR/ReactAndroid/gradle.properties").withInputStream { reactProperties.load(it) }
-//
-//def REACT_NATIVE_VERSION = reactProperties.getProperty("VERSION_NAME")
-//def REACT_NATIVE_MINOR_VERSION = REACT_NATIVE_VERSION.startsWith("0.0.0-") ? 1000 : REACT_NATIVE_VERSION.split("\\.")[1].toInteger()
+def REACT_NATIVE_DIR = resolveReactNativeDirectory()
+
+def reactProperties = new Properties()
+file("$REACT_NATIVE_DIR/ReactAndroid/gradle.properties").withInputStream { reactProperties.load(it) }
+
+def REACT_NATIVE_VERSION = reactProperties.getProperty("VERSION_NAME")
+def REACT_NATIVE_MINOR_VERSION = REACT_NATIVE_VERSION.startsWith("0.0.0-") ? 1000 : REACT_NATIVE_VERSION.split("\\.")[1].toInteger()
 
 def getReactNativeMinorVersion() {
     def REACT_NATIVE_DIR = resolveReactNativeDirectory()
@@ -108,11 +108,11 @@ android {
         ndkVersion rootProject.ext.ndkVersion
     }
 
-//    if (REACT_NATIVE_MINOR_VERSION >= 71) {
-//        buildFeatures {
-//            prefab true
-//        }
-//    }
+   if (REACT_NATIVE_MINOR_VERSION >= 71) {
+       buildFeatures {
+           prefab true
+       }
+   }
 
     if (agpVersion.tokenize('.')[0].toInteger() >= 8) {
         buildFeatures {
@@ -124,7 +124,7 @@ android {
         minSdkVersion safeExtGet('minSdkVersion', 21)
         targetSdkVersion safeExtGet('targetSdkVersion', 33)
         versionCode 1
-        versionName "1.0.0"
+        versionName "1.0.4"
 
         buildConfigField("boolean", "IS_NEW_ARCHITECTURE_ENABLED", isNewArchitectureEnabled().toString())
     }
