--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,10 +1,7 @@
 name: Publish Package to npmjs
 on:
-  push:
-    branches:
-      - main
-  # release:
-  #   types: [published]
+  release:
+    types: [published]
 jobs:
   publish:
     runs-on: ubuntu-latest
