* chore(package.json): update packageManager to yarn@4.3.1 * feat(package.json): add importSort configuration for TypeScript files

--- a/package.json
+++ b/package.json
@@ -132,5 +132,11 @@
   "publishConfig": {
     "provenance": true
   },
-  "packageManager": "yarn@4.3.1"
+  "packageManager": "yarn@4.3.1",
+  "importSort": {
+    ".js, .jsx, .ts, .tsx": {
+      "parser": "typescript",
+      "style": "import-sort-style-module-compact"
+    }
+  }
 }
