--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "react-native-render-pdf",
   "version": "1.0.11",
-  "summary": "A modern React Native PDF view component",
-  "description": "A modern React Native PDF view component that supports Android and iOS",
+  "summary": "A high performance React Native PDF Rendering component",
+  "description": "A high performance & feature rich React Native PDF View component written in Obj-C++ for iOS, Kotlin for Android and C++ for Windows",
   "main": "index.js",
   "typings": "./index.d.ts",
   "repository": {
@@ -12,6 +12,7 @@
   "keywords": [
     "react-component",
     "react-native",
+    "react-native-library",
     "android",
     "ios",
     "pdf",
@@ -88,17 +89,17 @@
     "url": "https://github.com/danfordgidraph/react-native-render-pdf/issues"
   },
   "dependencies": {
-    "@release-it/conventional-changelog": "^8.0.1",
     "deprecated-react-native-prop-types": "^2.3.0",
-    "md5": "^2.3.0",
-    "release-it": "^17.4.1",
-    "standard-version": "^9.5.0",
-    "typescript": "^5.5.3"
+    "md5": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.2",
     "@babel/runtime": "^7.20.1",
-    "prop-types": "^15.7.2"
+    "@release-it/conventional-changelog": "^8.0.1",
+    "prop-types": "^15.7.2",
+    "release-it": "^17.4.1",
+    "standard-version": "^9.5.0",
+    "typescript": "^5.5.3"
   },
   "peerDependencies": {
     "react": "*",
@@ -113,18 +114,18 @@
     "index.d.ts",
     "index.js",
     "index.js.flow",
-    "PdfManager.js",
-    "PdfPageView.js",
-    "PdfView.js",
-    "PdfViewFlatList.js",
-    "PinchZoomView.js",
-    "react-native-render-pdf.podspec",
-    "fabric/"
+    "src/fabric/",
+    "src/PdfManager.js",
+    "src/PdfPageView.js",
+    "src/PdfView.js",
+    "src/PdfViewFlatList.js",
+    "src/PinchZoomView.js",
+    "react-native-render-pdf.podspec"
   ],
   "codegenConfig": {
     "name": "rnpdf",
     "type": "components",
-    "jsSrcsDir": "./fabric",
+    "jsSrcsDir": "./src/fabric",
     "android": {
       "javaPackageName": "org.staxtech.android.pdf"
     }
